recursion.lessons.recursion.tree.Tree.scala.error
Tree:9: error: type mismatch;
 found   : Double
 required: Int
	e = Math.floor(p)
                      ^